@@ -2,7 +2,6 @@ TODO
 ====
 3. Support multiple params. marc-list 490 a 490 b
 4. Fix message of issue with MARC record.
-5. Add support for leader.
 7. Add check for input field (field or leader string).
 8.
 
@@ -16,4 +15,7 @@ Support XML file of MARC
 OK [20220518] skim
 
 6. Add freq to output structure. Add option to sort via freq.
+OK [20250128] skim
+
+5. Add support for leader.
 OK [20250128] skim
